// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a cell grid with a cell 1`] = `
<div
  className="header"
  role="rowgroup"
>
  <div
    className="header-content"
    role="row"
  >
    <HeaderCell
      isSelectable={false}
      sort="none"
    />
  </div>
</div>
`;

exports[`should render a cell grid with refCallback 1`] = `
<div
  className="header"
  role="rowgroup"
>
  <div
    className="header-content"
    role="row"
  />
</div>
`;

exports[`should render a checkmark selectionStyle cell grid 1`] = `
<div
  className="header"
  role="rowgroup"
>
  <div
    className="header-content"
    role="row"
  >
    <HeaderCheckMarkCell
      isIntermediate={false}
      isPadded={true}
      isSelectable={false}
      isSelected={false}
    />
  </div>
</div>
`;

exports[`should render a chevron selectionStyle cell grid 1`] = `
<div
  className="header"
  role="rowgroup"
>
  <div
    className="header-content"
    role="row"
  >
    <HeaderChevronCell
      isPadded={true}
    />
  </div>
</div>
`;

exports[`should render a default header cell grid 1`] = `
<div
  className="header"
  role="rowgroup"
>
  <div
    className="header-content"
    role="row"
  />
</div>
`;

exports[`should render a selectable cell grid 1`] = `
<div
  className="header"
  role="rowgroup"
>
  <div
    className="header-content"
    role="row"
  />
</div>
`;
